[project]
name = "agent-with-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crawl4ai>=0.8.6",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "tavily>=1.1.0",
]
